# tuto_bot

./: Readme.md
asm_chair/: CMakeLists.txt  package.xml
asm_chair/config/: joint_names_asm_chair.yaml
asm_chair/launch/: display.launch  gazebo.launch
asm_chair/meshes/: l_down_pin.STL  l_up_pin.STL  left_part.STL  r_up_pin.STL  support_front.STL
asm_chair/urdf/: asm_chair.csv  asm_chair.urdf
tuto_bringup/: CMakeLists.txt  package.xml
tuto_bringup/launch/: tutobot_bringup.launch  tutobot_bringup_table.launch  tutobot_driver.launch  tutobot_gripper_bringup.launch
tuto_description/: CMakeLists.txt  package.xml
tuto_description/launch/: description.launch  display.launch
tuto_description/robots/: ur_gripper.urdf.xacro  ur_gripper_config.urdf.xacro
tuto_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tuto_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  tuto_bot.srdf
tuto_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  (+4 more)
tuto_msgs/: CMakeLists.txt  package.xml
tuto_scripts/: CMakeLists.txt  package.xml
tuto_table_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+55 files in other folders)
